@@ -21,20 +21,22 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  * SOFTWARE.
  */
+
 import java.awt.AWTException;
 import java.awt.Rectangle;
 import java.awt.Robot;
 import java.awt.Toolkit;
-import java.awt.image.BufferedImage;
+import java.io.BufferedReader;
 import java.io.File;
 import java.io.FileInputStream;
+import java.io.FileNotFoundException;
 import java.io.FileOutputStream;
+import java.io.FileReader;
 import java.io.IOException;
+import java.io.InputStream;
+import java.io.InputStreamReader;
 import java.lang.reflect.Field;
-import java.net.HttpURLConnection;
 import java.net.URI;
-import java.net.URL;
-import java.net.URLConnection;
 import java.net.URLEncoder;
 import java.net.http.HttpClient;
 import java.net.http.HttpRequest;
@@ -54,6 +56,7 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.StringJoiner;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 import java.util.zip.ZipEntry;
 import java.util.zip.ZipOutputStream;
 import javax.imageio.ImageIO;
@@ -64,11 +67,11 @@ import javax.imageio.ImageIO;
  */
 public class Library {
   /**
-   * Generic 2 array concatenation
-   * Credits: Joachim Sauer https://stackoverflow.com/questions/80476/how-can-i-concatenate-two-arrays-in-java
-   * @param first is the first array (not null)
+   * Generic 2 array concatenation Credits: Joachim Sauer https://stackoverflow.com/questions/80476/how-can-i-concatenate-two-arrays-in-java
+   *
+   * @param first  is the first array (not null)
    * @param second is the second array (not null)
-   * @param <T> the element type
+   * @param <T>    the element type
    * @return concatenated array
    */
   public static <T> T[] arrayConcat(T[] first, T[] second) {
@@ -78,11 +81,11 @@ public class Library {
   }
 
   /**
-   * Generic N array concatenation
-   * Credits: Joachim Sauer https://stackoverflow.com/questions/80476/how-can-i-concatenate-two-arrays-in-java
+   * Generic N array concatenation Credits: Joachim Sauer https://stackoverflow.com/questions/80476/how-can-i-concatenate-two-arrays-in-java
+   *
    * @param first is the first array (not null)
-   * @param rest the rest of the arrays (optional)
-   * @param <T> the element type
+   * @param rest  the rest of the arrays (optional)
+   * @param <T>   the element type
    * @return concatenated array
    */
   public static <T> T[] multiArrayConcat(T[] first, T[]... rest) {
@@ -101,6 +104,7 @@ public class Library {
 
   /**
    * Returns true if all elements in array are equal.
+   *
    * @param arr the array to check (not null)
    * @param <T> the element type
    * @return true if all elements in the array are equal
@@ -110,8 +114,17 @@ public class Library {
   }
 
   /**
-   * Recursive Fibonacci series.
-   * Works only for small n and is spectacularly inefficient
+   * Returns the maximum integer from the array using reduction.
+   * @param arr the array of integers (not null)
+   * @return the maximum element from the array
+   */
+  public static int findMax(int[] arr) {
+    return Arrays.stream(arr).reduce(Integer.MIN_VALUE, Integer::max);
+  }
+
+  /**
+   * Recursive Fibonacci series. Works only for small n and is spectacularly inefficient
+   *
    * @param n given number
    * @return fibonacci number for given n
    */
@@ -124,8 +137,8 @@ public class Library {
   }
 
   /**
-   * Factorial.
-   * Works only for small numbers
+   * Factorial. Works only for small numbers
+   *
    * @param number for which factorial is to be calculated for
    * @return factorial
    */
@@ -139,6 +152,7 @@ public class Library {
 
   /**
    * Reverse string.
+   *
    * @param s the string to reverse
    * @return reversed string
    */
@@ -148,6 +162,7 @@ public class Library {
 
   /**
    * Read file as list of strings.
+   *
    * @param filename the filename to read from
    * @return list of strings
    * @throws IOException if an I/O error occurs
@@ -157,11 +172,11 @@ public class Library {
   }
 
   /**
-   * Capture screenshot and save it to PNG file.
-   * Credits: https://viralpatel.net/blogs/how-to-take-screen-shots-in-java-taking-screenshots-java/
+   * Capture screenshot and save it to PNG file. Credits: https://viralpatel.net/blogs/how-to-take-screen-shots-in-java-taking-screenshots-java/
+   *
    * @param filename the name of the file
    * @throws AWTException if the platform configuration does not allow low-level input control
-   * @throws IOException if an I/O error occurs
+   * @throws IOException  if an I/O error occurs
    */
   public static void captureScreen(String filename) throws AWTException, IOException {
     var screenSize = Toolkit.getDefaultToolkit().getScreenSize();
@@ -173,7 +188,8 @@ public class Library {
 
   /**
    * Convert string to date.
-   * @param date the date string
+   *
+   * @param date   the date string
    * @param format expected date format
    * @return Date
    * @throws ParseException in case of an unparseable date string
@@ -185,6 +201,7 @@ public class Library {
 
   /**
    * List directories.
+   *
    * @param path the path where to look
    * @return array of File
    */
@@ -193,9 +210,9 @@ public class Library {
   }
 
   /**
-   * Checks if given string is palindrome (same forward and backward).
-   * Skips non-letter characters
+   * Checks if given string is palindrome (same forward and backward). Skips non-letter characters
    * Credits: https://github.com/kousen/java_8_recipes
+   *
    * @param s string to check
    * @return true if palindrome
    */
@@ -212,11 +229,12 @@ public class Library {
   }
 
   /**
-  * Checks if two words are anagrams (contains same characters with same frequency in any order).
-  * @param s1 The first string to be checked
-  * @param s2 The second string to be checked
-  * @return true if they are anagrams of each other
-  */
+   * Checks if two words are anagrams (contains same characters with same frequency in any order).
+   *
+   * @param s1 The first string to be checked
+   * @param s2 The second string to be checked
+   * @return true if they are anagrams of each other
+   */
   public static boolean isAnagram(String s1, String s2) {
     var l1 = s1.length();
     var l2 = s2.length();
@@ -234,6 +252,7 @@ public class Library {
 
   /**
    * List files in directory.
+   *
    * @param folder the path where to look
    * @return array of File
    */
@@ -243,6 +262,7 @@ public class Library {
 
   /**
    * Recursively list all the files in directory.
+   *
    * @param path the path to start the search from
    * @return list of all files
    */
@@ -263,7 +283,8 @@ public class Library {
 
   /**
    * Generate random lottery numbers.
-   * @param numNumbers how many performLottery numbers are available (e.g. 49)
+   *
+   * @param numNumbers    how many performLottery numbers are available (e.g. 49)
    * @param numbersToPick how many numbers the player needs to pick (e.g. 6)
    * @return array with the random numbers
    */
@@ -278,6 +299,7 @@ public class Library {
 
   /**
    * Zip single file.
+   *
    * @param srcFilename the filename of the source file
    * @param zipFilename the filename of the destination zip file
    * @throws IOException if an I/O error occurs
@@ -287,7 +309,7 @@ public class Library {
     try (
         var fileOut = new FileOutputStream(zipFilename);
         var zipOut = new ZipOutputStream(fileOut);
-        var fileIn = new FileInputStream(srcFile);
+        var fileIn = new FileInputStream(srcFile)
     ) {
       var zipEntry = new ZipEntry(srcFile.getName());
       zipOut.putNextEntry(zipEntry);
@@ -301,17 +323,18 @@ public class Library {
 
   /**
    * Zip multiples files.
+   *
    * @param srcFilenames array of source file names
-   * @param zipFilename the filename of the destination zip file
+   * @param zipFilename  the filename of the destination zip file
    * @throws IOException if an I/O error occurs
    */
   public static void zipFiles(String[] srcFilenames, String zipFilename) throws IOException {
     try (
         var fileOut = new FileOutputStream(zipFilename);
-        var zipOut = new ZipOutputStream(fileOut);
+        var zipOut = new ZipOutputStream(fileOut)
     ) {
-      for (var i = 0; i < srcFilenames.length; i++) {
-        var srcFile = new File(srcFilenames[i]);
+      for (String srcFilename : srcFilenames) {
+        var srcFile = new File(srcFilename);
         try (var fileIn = new FileInputStream(srcFile)) {
           var zipEntry = new ZipEntry(srcFile.getName());
           zipOut.putNextEntry(zipEntry);
@@ -327,8 +350,9 @@ public class Library {
 
   /**
    * Sort an array with quicksort algorithm.
-   * @param arr array to sort
-   * @param left left index where to begin sort (e.g. 0)
+   *
+   * @param arr   array to sort
+   * @param left  left index where to begin sort (e.g. 0)
    * @param right right index where to end sort (e.g. array length - 1)
    */
   public static void quickSort(int[] arr, int left, int right) {
@@ -361,6 +385,7 @@ public class Library {
 
   /**
    * Performs HTTP GET request.
+   *
    * @param uri the URI of the connection
    * @return response object
    * @throws Exception i/o error, interruption error, etc
@@ -374,20 +399,20 @@ public class Library {
   }
 
   /**
-   * Performs HTTP POST request.
-   * Credits https://stackoverflow.com/questions/3324717/sending-http-post-request-in-java
-   * @param address the URL of the connection in String format, like "http://www.google.com"
+   * Performs HTTP POST request. Credits https://stackoverflow.com/questions/3324717/sending-http-post-request-in-java
+   *
+   * @param address   the URL of the connection in String format, like "http://www.google.com"
    * @param arguments the body of the POST request, as a HashMap
    * @return response object
-   * @throws IOException if an I/O error occurs
+   * @throws IOException          if an I/O error occurs
    * @throws InterruptedException if the operation is interrupted
    */
   public static HttpResponse<String> httpPost(String address, HashMap<String, String> arguments)
       throws IOException, InterruptedException {
     var sj = new StringJoiner("&");
     for (var entry : arguments.entrySet()) {
-      sj.add(URLEncoder.encode(entry.getKey(), "UTF-8") + "="
-          + URLEncoder.encode(entry.getValue(), "UTF-8"));
+      sj.add(URLEncoder.encode(entry.getKey(), StandardCharsets.UTF_8) + "="
+          + URLEncoder.encode(entry.getValue(), StandardCharsets.UTF_8));
     }
     var out = sj.toString().getBytes(StandardCharsets.UTF_8);
     var request = HttpRequest.newBuilder()
@@ -400,9 +425,9 @@ public class Library {
   }
 
   /**
-   * Checks if given number is a prime number.
-   * Prime number is a number that is greater than 1 and divided by 1 or itself only
-   * Credits: https://en.wikipedia.org/wiki/Prime_number
+   * Checks if given number is a prime number. Prime number is a number that is greater than 1 and
+   * divided by 1 or itself only Credits: https://en.wikipedia.org/wiki/Prime_number
+   *
    * @param number number to check prime
    * @return true if prime
    */
@@ -425,6 +450,7 @@ public class Library {
 
   /**
    * Greatest common divisor calculation.
+   *
    * @param a one of the numbers whose gcd is to be computed
    * @param b other number whose gcd is to be computed
    * @return gcd of the two numbers
@@ -437,7 +463,7 @@ public class Library {
   }
 
   /**
-   * Print all declared methods of the class
+   * Print all declared methods of the class.
    * @param cls Tested class
    * @return list of methods name
    */
@@ -448,20 +474,22 @@ public class Library {
     }
     return list;
   }
-  
+
   /**
-   * Print all declared public field names of the class or the interface the class extends
+   * Print all declared public field names of the class or the interface
+   * the class extends.
    * @param cls Tested class
    * @return list of name of public fields
    */
   public static List<String> getAllFieldNames(final Class<?> cls) {
     return Arrays.stream(cls.getFields())
-            .map(Field::getName)
-            .collect(Collectors.toList());
+        .map(Field::getName)
+        .collect(Collectors.toList());
   }
 
   /**
    * Sort an array with bubbleSort algorithm.
+   *
    * @param arr array to sort
    */
   public static void bubbleSort(int[] arr) {
@@ -477,7 +505,91 @@ public class Library {
       }
     }
   }
+
   /**
+   * Sort an array with selectionSort algorithm.
+   *
+   * @param arr array to sort
+   */
+  public static void selectionSort(int[] arr) {
+    var len = arr.length;
+
+    for (var i = 0; i < len - 1; i++) {
+      var minIndex = i;
+
+      for (var j = i + 1; j < len; j++) {
+        if (arr[j] < arr[minIndex]) {
+          minIndex = j;
+        }
+      }
+
+      var tmp = arr[minIndex];
+      arr[minIndex] = arr[i];
+      arr[i] = tmp;
+    }
+  }
+
+
+  /**
+   * Find the Levenshtein distance between two words. https://en.wikipedia.org/wiki/Levenshtein_distance
+   *
+   * @param word1 first word
+   * @param word2 second word
+   * @return distance
+   */
+  public static int findLevenshteinDistance(String word1, String word2) {
+    // If word2 is empty, removing
+    int[][] ans = new int[word1.length() + 1][word2.length() + 1];
+    for (int i = 0; i <= word1.length(); i++) {
+      ans[i][0] = i;
+    }
+    // if word1 is empty, adding
+    for (int i = 0; i <= word2.length(); i++) {
+      ans[0][i] = i;
+    }
+    // None is empty
+    for (int i = 1; i <= word1.length(); i++) {
+      for (int j = 1; j <= word2.length(); j++) {
+        int min = Math.min(Math.min(ans[i][j - 1], ans[i - 1][j]), ans[i - 1][j - 1]);
+        ans[i][j] = word1.charAt(i - 1) == word2.charAt(j - 1) ? ans[i - 1][j - 1] : min + 1;
+      }
+    }
+    return ans[word1.length()][word2.length()];
+  }
+
+  /**
+   * Read file using stream and return list of string lines.
+   *
+   * @param fileName file to read
+   * @throws FileNotFoundException if an I/O error occurs
+   */
+  public static List<String> readFile(String fileName) throws FileNotFoundException {
+    try (Stream<String> stream = new BufferedReader(new FileReader(fileName)).lines()) {
+      return stream.collect(Collectors.toList());
+    }
+  }
+
+  /**
+   * Convert InputStream to String.
+   *
+   * @param inputStream InputStream to convert
+   * @return String
+   * @throws IOException if an I/O error occurs
+   */
+  public static String inputStreamToString(InputStream inputStream) throws IOException {
+    try (var reader = new BufferedReader(new InputStreamReader(inputStream))) {
+      var stringBuilder = new StringBuilder();
+      var data = reader.read();
+
+      while (data != -1) {
+        stringBuilder.append((char) data);
+        data = reader.read();
+      }
+      return stringBuilder.toString();
+    }
+  }
+  
+/**
   * Searches a sorted array for a given value using Binary Search.
   * @param arr the sorted array
   * @param item the item being searched
@@ -499,5 +611,4 @@ public class Library {
       }
     }
     return -1;
-  }
 }
